# web-mining

./: .env  .gitignore  main.py  pyproject.toml  temp.py
src/exp/v0xxx_preprocess/: run.sh  v0001_download_rawdata.py  v0100_articles.py  v0101_article_inviews_in_split.py  v0101_article_inviews_in_split_v2.py  v0102_article_metadata_id_v2.py  v0103_article_history_counts.py  v0200_users.py  v0201_user_inviews_in_split.py  v0300_impressions.py  v0301_imp_counts_per_user.py  v0302_imp_target_in_split.py
src/exp/v1xxx_training/: run_pl.sh  run_scratch.sh  v1157_111_fix_past_v2.py  v1170_111_L8_128d.py  v1174_111_L8_128d_smpl3_drophist.py  v1184_111_PL_bert_L4_256d.py
src/exp/v2xxx_ablation/: v2001_000_v1174_noleak.py  v2003_111_v1174_no-drophist.py  v2004_111_v1174_no-imp.py  v2005_111_v1174_no-transformer.py  v2006_111_v1174_no-sample.py  v2007_111_v1174_no-transformer-same-parameter.py
src/exp/v8xxx_ensemble/: run_ensemble  v8004_015_016_v1170_v1174.py
src/exputils/: __init__.py  const.py  lightning.py  torch.py  utils.py
src/newsRecSys/evaluation/: beyond_accuracy.py  protocols.py  utils.py
src/newsRecSys/evaluation/metrics/: _beyond_accuracy.py  _sklearn.py
src/newsRecSys/model/fastformer/: dataloader.py  fastformer.py  fastformer_fixed.py  fastformer_wu.py
src/newsRecSys/model/naml/: GenerateCategoryDescription.py  NewsEncoding.py  base_model.py  deeprec_utils.py  layers.py  model.py  naml.py  run.sh
src/newsRecSys/utils/: _articles.py  _articles_behaviors.py  _behaviors.py  _decay.py  _descriptive_analysis.py  _nlp.py  _polars.py
src/web_mining/evaluation/: __init__.py  _ba_test.py  beyond_accuracy.py  metrics_protocols.py  protocols.py  utils.py
src/web_mining/evaluation/metrics/: __init__.py  _beyond_accuracy.py  _classification.py  _ranking.py  _sklearn.py
src/web_mining/model/fastformer/: dataloader.py  fastformer_fixed.py
src/web_mining/utils/: _articles.py  _articles_behaviors.py  _behaviors.py  _descriptive_analysis.py  _nlp.py  _polars.py  _python.py
