[project]
name = "web-mining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.0.3",
    "scikit-learn==1.7.2",
    # --- PHẢI THÊM CÁC DÒNG NÀY ---
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "tqdm==4.67.1",
    "polars==1.35.2",
    "pyyaml==6.0.3",
    "ruff==0.14.7",
    "transformers==4.57.3",
    "pytorch-lightning==2.6.0",
    "loguru==0.7.3",
    "typer==0.20.0",
    "omegaconf==2.3.0",
    "hydra-slayer==0.5.0",
    "lightning==2.6.0",
    "pytorch-toolbelt==0.8.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "antlr4-python3-runtime==4.9.3",
    "attrs==25.4.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "filelock==3.20.0",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "hf-xet==1.2.0",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "lightning-utilities==0.15.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "networkx==3.6",
    "nvidia-cublas-cu11==11.11.3.6",
    "nvidia-cuda-cupti-cu11==11.8.87",
    "nvidia-cuda-nvrtc-cu11==11.8.89",
    "nvidia-cuda-runtime-cu11==11.8.89",
    "nvidia-cudnn-cu11==9.1.0.70",
    "nvidia-cufft-cu11==10.9.0.58",
    "nvidia-curand-cu11==10.3.0.86",
    "nvidia-cusolver-cu11==11.4.1.48",
    "nvidia-cusparse-cu11==11.7.5.86",
    "nvidia-nccl-cu11==2.21.5",
    "nvidia-nvtx-cu11==11.8.86",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pillow==12.0.0",
    "polars-runtime-32==1.35.2",
    "propcache==0.4.1",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "regex==2025.11.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "safetensors==0.7.0",
    "scipy==1.16.3",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sympy==1.13.1",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.1",
    "torchmetrics==1.8.2",
    "triton==3.2.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "yarl==1.22.0",
    "pyarrow==20.0.0",
    "numpy==1.26.4",
    "tenacity>=9.1.2",
    "sentence-transformers>=5.1.2",
    "accelerate>=1.12.0",
]
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.ruff]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

# Độ dài dòng code
line-length = 120

# Bật toàn bộ rule quan trọng (lint)
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort-like import rules
    "B",   # bugbear
    "UP",  # pyupgrade
]

# Tự động sửa lỗi nếu có thể
fix = true

# Loại trừ folder không cần check
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "data",
    "build",
    "dist",
]

# -----------------------
# ✨ Formatter Settings
# -----------------------
[tool.ruff.format]
quote-style = "double"        # Dùng dấu " thay vì '
indent-style = "space"        # luôn dùng space
line-ending = "lf"            # tránh lỗi CRLF/LF
skip-magic-trailing-comma = false
docstring-code-format = true  # format code block trong docstring

# ------------------------------------
# 🧹 Import sorting (thay isort)
# ------------------------------------
[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false

